fix(client): tooltip text not visible in light mode

--- a/packages/amplication-design-system/src/style/css-variables.scss
+++ b/packages/amplication-design-system/src/style/css-variables.scss
@@ -44,6 +44,7 @@
   --negative: #e93c51;
 
   --tooltip-background: #1b1f23;
+  --tooltip-text-color: #ffffff;
 
   --panel-background: var(--white);
   --panel-hover-background: var(--black5);
